# dasher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/dasher/: config.py  database.py  http.py  main.py  ws_manager.py
backend/src/dasher/models/: crawler.py  layout.py
backend/src/dasher/routers/: crawler.py  gmail.py  hass.py  layout.py  rss.py  sabnzbd.py  unifi.py  websocket.py  widgets.py
backend/src/dasher/services/: crawler_service.py  gmail_service.py  hass_service.py  llm_service.py  rss_service.py  scheduler.py
backend/tests/: conftest.py  test_database.py  test_layout.py  test_widgets.py
frontend/admin/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/admin/src/: index.css  main.tsx  router.tsx
frontend/admin/src/api/: widgets.ts
frontend/admin/src/components/: Card.tsx  ErrorLogPanel.tsx  WidgetEditModal.tsx
frontend/admin/src/lib/: devMode.ts  errorLog.ts  queryClient.ts
frontend/admin/src/pages/: ComponentsPage.tsx  LayoutPage.tsx
frontend/dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/dashboard/src/: App.tsx  WidgetPreview.tsx  index.css  main.tsx  vite-env.d.ts
frontend/dashboard/src/api/: widgets.ts
frontend/dashboard/src/hooks/: useColorOverrides.ts
frontend/dashboard/src/sdk/: index.ts  registry.ts  types.ts
frontend/dashboard/src/utils/: widgetColor.ts
nginx/: nginx.conf
(+16 files in other folders)
