[project]
name = "dasher"
version = "0.1.0"
description = "Customizable TV/desktop info dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "apscheduler>=3.10",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dasher"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
